shard with the correct pipeline

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1606,7 +1606,7 @@ trigger_map:
   - push_branch: main
     pipeline: app_launch_times_pipeline
   - push_branch: optimize-bitrise
-    pipeline: app_launch_times_pipeline
+    pipeline: pr_smoke_e2e_pipeline
   - tag: 'qa-*'
     pipeline: create_qa_builds_pipeline
   - tag: 'dev-e2e-*'
