shard, SHARD. SHARD

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -765,7 +765,7 @@ workflows:
                 fi
                 export METAMASK_ENVIRONMENT='local'
                 export METAMASK_BUILD_TYPE='main'
-                IGNORE_BOXLOGS_DEVELOPMENT="true" FORCE_BUNDLING=true yarn test:e2e:ios:bitrise:run --shard="$SHARD"/4 e2e/specs
+                IGNORE_BOXLOGS_DEVELOPMENT="true" FORCE_BUNDLING=true yarn test:e2e:android:bitrise:run --shard="$SHARD"/4 e2e/specs
       - custom-test-results-export@1:
           title: Export test results
           is_always_run: true
@@ -1019,7 +1019,7 @@ workflows:
                 node -v
                 export METAMASK_ENVIRONMENT='local'
                 export METAMASK_BUILD_TYPE='main'
-                IGNORE_BOXLOGS_DEVELOPMENT="true" FORCE_BUNDLING=true yarn test:e2e:ios:debug:run "$TEST_SUITE_FOLDER" --testNamePattern="$TEST_SUITE"
+                IGNORE_BOXLOGS_DEVELOPMENT="true" FORCE_BUNDLING=true yarn test:e2e:ios:bitrise:run --shard="$SHARD"/4 e2e/specs
       - custom-test-results-export@1:
           is_always_run: true
           is_skippable: false
