--- a/package.json
+++ b/package.json
@@ -272,6 +272,7 @@
     "lottie-react-native": "5.1.5",
     "mockttp": "^3.15.2",
     "multihashes": "0.4.14",
+    "nativewind": "^4.0.1",
     "number-to-bn": "1.7.0",
     "obs-store": "4.0.3",
     "path": "0.12.7",
@@ -358,6 +359,8 @@
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.5.3",
     "stream-browserify": "3.0.0",
+    "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7",
     "through2": "3.0.1",
     "unicode-confusables": "^0.1.1",
     "url": "0.11.0",
