--- a/bitrise.yml
+++ b/bitrise.yml
@@ -129,7 +129,7 @@ stages:
     abort_on_fail: true
     workflows:
       - ios_e2e_build: {}
-      - android_e2e_build: {}
+      # - android_e2e_build: {}
   run_smoke_e2e_ios_android_stage:
     workflows:
       # - run_ios_api_specs: {}
