--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1546,7 +1546,7 @@ trigger_map:
     pipeline: app_launch_times_pipeline
   - tag: 'qa-*'
     pipeline: create_qa_builds_pipeline
-  - push_branch: 'test-running-detox-on-qa'
-    pipeline: pr_smoke_e2e_pipeline
+  # - push_branch: 'test-running-detox-on-qa'
+  #   pipeline: pr_smoke_e2e_pipeline
   - tag: 'v*.*.*-RC-*'
     pipeline: release_e2e_pipeline
