--- a/bitrise.yml
+++ b/bitrise.yml
@@ -132,14 +132,14 @@ stages:
       # - android_e2e_build: {}
   run_smoke_e2e_ios_android_stage:
     workflows:
-      # - run_ios_api_specs: {}
-      - run_tag_smoke_accounts_ios: {}
+      - run_ios_api_specs: {}
+      # - run_tag_smoke_accounts_ios: {}
       # - run_tag_smoke_accounts_android: {}
       - run_tag_smoke_assets_ios: {}
       # - run_tag_smoke_assets_android: {}
-      - run_tag_smoke_confirmations_ios: {}
+      # - run_tag_smoke_confirmations_ios: {}
       # - run_tag_smoke_confirmations_android: {}
-      - run_tag_smoke_swaps_ios: {}
+      # - run_tag_smoke_swaps_ios: {}
       # - run_tag_smoke_swaps_android: {}
       # - run_tag_smoke_core_ios: {}
       # - run_tag_smoke_core_android: {}
@@ -739,9 +739,8 @@ workflows:
         stack: linux-docker-android-22.04
   ios_api_specs:
     before_run:
-      - setup
+      - code_setup
       - install_detox
-      - prep_environment
     after_run:
       - notify_failure
     steps:
@@ -764,11 +763,11 @@ workflows:
                 # INTERMEDIATE_IOS_BUILD_DIR & INTERMEDIATE_IOS_DETOX_DIR are the cached directories by ios_e2e_build's "Save iOS build" step
                 cp -r "$INTERMEDIATE_IOS_BUILD_DIR" "$BITRISE_SOURCE_DIR/ios/build"
                 cp -r "$INTERMEDIATE_IOS_DETOX_DIR" "$BITRISE_SOURCE_DIR/../Library/Detox"
-      - restore-cocoapods-cache@2: {}
-      - restore-cache@2:
-          title: Restore cache node_modules
-          inputs:
-            - key: node_modules-{{ .OS }}-{{ .Arch }}-{{ getenv "BRANCH_COMMIT_HASH" }}
+      # - restore-cocoapods-cache@2: {}
+      # - restore-cache@2:
+      #     title: Restore cache node_modules
+      #     inputs:
+      #       - key: node_modules-{{ .OS }}-{{ .Arch }}-{{ getenv "BRANCH_COMMIT_HASH" }}
       - certificate-and-profile-installer@1: {}
       - set-xcode-build-number@1:
           inputs:
